expected/main/core/case/mcasefromvaralt6.err
ERROR: "actual/main/core/case/mcasefromvaralt6.lc", line 9
            Nothing -> print 3
            ^
Type mismatch: cannot unify "Maybe" with "Dup"

ERROR: Aborting after previously reported error

